replace unmodifiableList to copyOf and remove unused import